--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,8 @@ header {
     top: 0;
     align-items: center;
     z-index: 980;
-    padding: 0;
+    padding: 1rem 0;
+    height: 6vh;
  }
 
  #logoHome {
@@ -191,20 +192,21 @@ header {
 .carritoCollapse {
     position: absolute;
     right: 0;
+    top: 0;
+    width: 30%;
+    height: 82vh;
+    padding: 6rem 3rem 3rem 3rem;
+    background-color: #e6e4df;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 30%;
-    height: 83vh;
-    padding: 5rem 3rem;
-    padding-bottom: 1rem;
-    background-color: #e6e4df;
 }
 
 
 #botonComprar{
     background-color: transparent;
-    margin: 2rem 0;
+    margin:0;
+    margin-top: 1rem;
     cursor: pointer;
 }
 
@@ -230,7 +232,7 @@ header {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 55vh;
+    height: 65%;
     justify-content: space-between;
     overflow: scroll;
 
@@ -284,7 +286,7 @@ header {
     width: 100%;
 }
 
-#divCheckout {
+.divCheckout {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -330,7 +332,9 @@ header {
 #cantidad{
     width: 30%;
     padding:1rem;
-    margin-right: .8rem;}
+    margin-right: .8rem;
+    margin-top: .5rem;
+}
 
 input::placeholder {
     font-family: 'Open Sans', sans-serif;
@@ -393,8 +397,8 @@ input::placeholder {
 .carrito {
     background-image: url(../img/shopping-cart.svg);
     background-repeat: no-repeat;
-    padding: 1rem;
-    margin: 1rem .5rem;
+    padding: .9rem;
+    margin: 1rem 0;
     border: none;
     background-color: #F2EEE8;
     transition: all .3s linear;
